Revert "241028_연상훈_객체변환메서드_수정"
This reverts commit 8c76d7cb2bc1e5519d153a54fef917a2c26a2fff.